# cspot

./: .clang-format  .gitignore
apps/: CMakeLists.txt
apps/dataflow/: CMakeLists.txt  df.h  dfhandler.c  dfinterface.c  dfinterface.h  dfoperation.c  two_plus_two.c  woofc-namespace-platform
apps/dataflow/test/: dfaddnode  dfaddoperand  dfgetoperand  dfhandler  dfinit  test.dfprogram  two_plus_two  two_plus_two.sh  woofc-container
apps/dataflow/tests/: CMakeLists.txt  cond-test.c
apps/dataflow_multiwoof/: .dfinterface.cpp.swp  .output_handler.cpp.swp  .subscription_event_handler.cpp.swp  CMakeLists.txt  df.h  df_interface.cpp  df_interface.h  dfinterface.cpp  dfinterface.h  operation_handler.cpp  output_handler.cpp  subscription_event_handler.cpp
apps/dataflow_multiwoof/df_data/df_benchmark_data/: linreg_multinode_multimachine_partition_results.txt  linreg_multinode_multimachine_regular_results.txt  linreg_multinode_multimachine_results.txt  linreg_multinode_partition_duplicate.txt  linreg_multinode_partition_res.txt  linreg_multinode_results.txt  linreg_partition_exp_backoff.txt  linreg_uninode_results.txt
apps/dataflow_multiwoof/df_data/df_benchmark_raw_data/: linreg-multimachine-multinode.txt  linreg_multinode_partition.txt  linreg_multinode_partition_new_backoff.txt  linreg_multinode_regular.txt  linreg_multinode_regular_new.txt  linreg_multinode_results_2.txt  linreg_multinode_results_50_1.txt  linreg_multinode_results_partition.txt  res.py
apps/dataflow_multiwoof/logger_system/: CMakeLists.txt  df_logger.c  df_logger.h  df_operation_logger.c  df_operation_logger.h
apps/dataflow_multiwoof/operation_system/: CMakeLists.txt  df_arithmetic.c  df_arithmetic.h  df_cast.c  df_cast.h  df_internal.c  df_internal.h  df_logic.c  df_logic.h  df_machine_learning.c  df_machine_learning.cpp  df_machine_learning.h  df_operation.c  df_operation.h  df_operations.c  df_operations.h
apps/dataflow_multiwoof/tests/: .arithmetic_tests.cpp.swp  .loop_tests.cpp.swp  .tests.cpp.swp  CMakeLists.txt  arithmetic_tests.cpp  conditional_tests.cpp  df-filter-test.cpp  df-knn-test.cpp  df-matmul-test.cpp  df-multi-machine-test.cpp  df-namespace-graphviz-test.cpp  df-namespace-test.cpp  df-online-linreg-multinode-test.cpp  df-online-linreg-test.cpp  df-quadratic-multi-machine-test.cpp  df-quadratic-test.cpp  df-selector-test.cpp  df-simple-test.cpp  df-square-root-test.cpp  df-static-maps-test.cpp  loop_tests.cpp  multinode_regression.cpp  multiwoof-test.cpp  namespace_tests.cpp  test_utils_c.h  tests.cpp
apps/dataflow_multiwoof/tests/operation_system/: CMakeLists.txt  df_test_arithmetic.cpp  df_test_arithmetic_abs.cpp  df_test_arithmetic_addition.cpp  df_test_arithmetic_division.cpp  df_test_arithmetic_modulo.cpp  df_test_arithmetic_multiplication.cpp  df_test_arithmetic_sqrt.cpp  df_test_arithmetic_subtraction.cpp  df_test_logic.cpp  df_test_logic_and.cpp  df_test_logic_eq.cpp  df_test_logic_gt.cpp  df_test_logic_gte.cpp  df_test_logic_lt.cpp  df_test_logic_lte.cpp  df_test_logic_neq.cpp  df_test_logic_not.cpp  df_test_logic_or.cpp
apps/dataflow_multiwoof/type_system/: CMakeLists.txt  df_type.c  df_type.h  df_type_builder.c  df_type_builder.h  df_types.c  df_types.h  dftype.c  dftype.h
src/: woofc-container.cpp  woofc-namespace-platform.cpp
src/include/: debug.h  woofc-priv.h
